--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"/>
       <link rel="shortcut icon" href="/img/jungle_klein.png"/>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="./style.css">
     <title>Jungle Beats</title>
   </head>
   <body>
